Updated README.md, fixed minor layout issues, fixed modal.js exception

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -50,7 +50,7 @@
 			</h3>
 			<p>You can import or export your configurations to share with your team.</p>
 			<div class="config-container">
-				<label class="import-label" for="file">Import: </label><input class="import-label" name="file" type="file" id="import"/>
+				<label class="import-label" for="file">Import: </label><input class="import-label" name="file" type="file" accept=".json" id="import"/>
 				<button class="btn-export" name="export" id="export">Export</button>
 				<div id="import-status"></div>
 			</div>
