rename Url to Host in settings

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -25,7 +25,7 @@
 					<thead>
 						<tr>
 							<td>Name</td>
-							<td>URL</td> 
+							<td>Host</td> 
 							<td>Color</td>
 							<td></td>
 						</tr>
