Added functionality to choose label position.

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -27,6 +27,7 @@
 							<td>Name</td>
 							<td>URL(use 'regex:' prefix to match a host by RegEx)</td> 
 							<td>Color</td>
+							<td>Position</td>
 							<td></td>
 						</tr>
 					</thead>
