Add a link to the configuration screen on the Environment Marker icon that is displayed besides the address bar.

--- a/app/html/popup.html
+++ b/app/html/popup.html
@@ -6,9 +6,11 @@
 </head>
 <body>
   <form>
-   <span id="popup-text">Click on the following button to Hide/Show label:</span>
+   <span id="popup-text">Click on the following button to temporarily Hide/Show the label:</span>
    <button id="popup-button">Hide Label</button>
  </form>
+ <br />
+ <a id="go-to-options" href="#">Configure this extension.</a>
  <script src="/scripts/popup.js"></script>
 </body>
 </html>
