Migrated build system to use gulp only, removed bower depency, updated dependecy packages.

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -17,7 +17,7 @@
 	<div class="options-sections">
 		<section class="setup-section">
 			<h3>
-				<amr>Environment Markers Configurations</amr>
+				<amr>Environment Marker Configurations</amr>
 			</h3>
 			<div class="config-container">
 
@@ -57,7 +57,7 @@
 			</div>
 		</section>
 	</div>
-	<script src="/scripts/libs/jscolor/jscolor.js"></script>
+	<script src="/scripts/libs/jscolor-picker/jscolor.min.js"></script>
 	<script src="/scripts/options.js"></script>
 </body>
 </html>
