Minor bug fixing for v1.1.

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -62,7 +62,7 @@
 				<input class="import-label hosted-file" name="hosted-file" type="text" id="hosted-file"/>
 				<button class="btn-import" name="btn-import" id="btn-import">Import</button>
 				<br />
-				<input type="checkbox" id="auto-import" value="1" /><label class="auto-import-label" for="auto-import">Automatically import any configuration changes on hosted file.</label>
+				<input type="checkbox" id="auto-import" value="1" /><label class="auto-import-label" for="auto-import">Automatically import in case of changes in the hosted file.</label>
 				<br />
 				<h3>Export</h3>
 				<button class="btn-export" name="export" id="export">Export</button>
