--- a/app/html/popup.html
+++ b/app/html/popup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="container">
-		<h2>Enrivonment Marker Extension</h2>
+		<h2>Environment Marker Extension</h2>
 		<form class="hide-show" autocomplete="off" novalidate="">
 			<h3>Toggle visibility</h3>
 			<fieldset>
