Added support to transparency in the ribbon

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -48,7 +48,6 @@
 										<td data-i18n="__Color__">Color</td>
 										<td data-i18n="__FontSize__">Font Size</td>
 										<td data-i18n="__Position__">Position</td>
-										<td data-i18n="__Preview__">Preview</td>
 										<td></td>
 									</tr>
 								</thead>
@@ -130,7 +129,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="/scripts/libs/jscolor-picker/jscolor.min.js"></script>
+	<script src="/scripts/libs/@eastdesire/jscolor/jscolor.min.js"></script>
 	<script src="/scripts/util.js"></script>
 	<script src="/scripts/options.js"></script>
 </body>
