--- a/app/html/popup.html
+++ b/app/html/popup.html
@@ -60,9 +60,9 @@
 							</div>
 						</div>
 						<div class="row mt-5">
-							<div class="col-3">
+							<div class="col-4">
 								<label for="color" data-i18n="__Color__">Color</label>
-								<input type="text" name="color" id="color" class="color form-input" value="" required />
+								<input type="text" name="color" id="color" class="color form-input" data-jscolor="" value="" required />
 							</div>
 							<div class="col-3">
 								<label for="fontSize" data-i18n="__FontSize__">Font Size</label>
@@ -82,7 +82,7 @@
 									<option value="60px">60px</option>
 								</select>
 							</div>
-							<div class="col-6">
+							<div class="col-5">
 								<label for="position" data-i18n="__Position__">Position</label>
 								<div class="position-container">
 									<select id="position" name="position" class="position">
@@ -115,7 +115,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="/scripts/libs/jscolor-picker/jscolor.min.js"></script>
+	<script src="/scripts/libs/@eastdesire/jscolor/jscolor.min.js"></script>
 	<script src="/scripts/util.js"></script>
 	<script src="/scripts/popup.js"></script>
 </body>
